# SourcePauseTool

./: .gitignore  .gitmodules  CONTRIBUTING.md  README.md  cross_file.txt  meson.build  spt.sln  spt.vcxproj  spt.vcxproj.filters  sptlib2.vcxproj  sptlib2.vcxproj.filters  sptlib2test.vcxproj  sptlib2test.vcxproj.filters
.github/workflows/: CI.yml
SDK/: SDK.vcxproj  SDK.vcxproj.filters  cplayerlocaldata.h  imovehelper.h
SDK/orangebox_new/: SDK_orangebox.vcxproj  SDK_orangebox.vcxproj.filters
SPTLib2/: math.cpp
SPTLib2Test/: main.cpp  math_tests.cpp
Tests/: run_tests.py
Tests/srctas_test/: srctas_test.cpp  srctas_test.vcxproj  srctas_test.vcxproj.filters
Unit tests/srctas_test/: srctas_test.cpp  srctas_test.vcxproj
spt/: aim.cpp  aim.hpp  cvars.cpp  cvars.hpp  feature.cpp  feature.hpp  ljstats.cpp  ljstats.hpp  patterns.hpp  spt-serverplugin.cpp  spt-serverplugin.hpp  sptlib-wrapper.hpp  stdafx.hpp  strafestuff.cpp  strafestuff.hpp
spt/OrangeBox/: cvars.cpp  cvars.hpp  module_hooks.cpp  modules.cpp  modules.hpp  patterns.hpp  spt-serverplugin.cpp  spt-serverplugin.hpp
spt/aim/: aim.cpp  aimstuff.cpp  aimstuff.hpp
spt/fcps/: fcps_animation.cpp  fcps_animation.hpp  fcps_memory_repr.cpp  fcps_memory_repr.hpp  fcps_override.cpp  fcps_override.hpp
spt/features/: afterframes.cpp  afterframes.hpp  aim.cpp  aim.hpp  autojump.cpp  autojump.hpp  cvar.cpp  demo.cpp  demo.hpp  dmomm.cpp  ent_props.cpp  ent_props.hpp  fov.cpp  generic.cpp  generic.hpp  (+41 more)
spt_test/: framebulk.cpp  logfile_test.cpp  parsing_test.cpp  script_test.cpp  spt_test.vcxproj  test.cpp  test_controller.cpp  test_kbutton.cpp
srctas/: srctas.vcxproj  srctas.vcxproj.filters
(+275 files in other folders)
